--- a/navbar.css
+++ b/navbar.css
@@ -16,13 +16,21 @@ body{
     padding: 10px;
 }
 
+.nav-item{
+    font-weight: bold;
+}
 
 .nav-link{
     background: white;
     color:black;
     padding:10px 30px;
-    text-decoration: none;    
+    text-decoration: none; 
+    font-weight: bold;   
     }
+
+.dropdown-item{
+  font-weight: bold;
+}
 
 .nav-link:hover{
     color: #ff556e;
@@ -52,6 +60,8 @@ body{
     margin-left: auto; 
     margin-right: auto;
 }
+
+
 
 .heartbeat {
 	-webkit-animation: heartbeat 1.5s ease-in-out infinite both;
