--- a/navbar.css
+++ b/navbar.css
@@ -34,6 +34,7 @@ body{
 
 .nav-link:hover{
     color: #ff556e;
+    height: 1em;
 }
 
 
@@ -61,7 +62,13 @@ body{
     margin-right: auto;
 }
 
-
+.btn-personal{
+  border-color: #ff556e;
+  border-width: medium;
+  border-radius: 16px;
+  padding: 0;
+ 
+}
 
 .heartbeat {
 	-webkit-animation: heartbeat 1.5s ease-in-out infinite both;
