--- a/navbar.css
+++ b/navbar.css
@@ -3,21 +3,36 @@
 body{
     font-family: 'Open Sans', sans-serif;
     font-weight: bold;
+    background-color:#f7fafd;
     }
+
+.circulo{
+  display: flex;
+  align-self: flex-end;
+  position:absolute;
+  width: 200px;
+  height: 200px;
+  padding-left: 20px;
+  }
 
 .container-nav{
     display: flex;
     direction: row;
     justify-content: space-between;
-    background-color: rgb(255, 255, 255);
+    background-color: #f7fafd;
 }
 
+.contenedor-movil{
+  display: flex;
+  flex-direction: column;
+}
 .image{
     padding: 10px;
 }
 
 .nav-item{
     font-weight: bold;
+    
 }
 
 .nav-link{
@@ -25,17 +40,13 @@ body{
     color:black;
     padding:10px 30px;
     text-decoration: none; 
-    font-weight: bold;   
-    }
-
-.dropdown-item{
-  font-weight: bold;
+    font-weight: bold;  
 }
+
 
 .nav-link:hover{
     color: #ff556e;
-    height: 1em;
-}
+   }
 
 
 .botones-arriba{
@@ -63,18 +74,107 @@ body{
 }
 
 .btn-personal{
-  border-color: #ff556e;
-  border-width: medium;
-  border-radius: 16px;
-  padding: 0;
+    border-color: #ff556e;
+    border-width: medium;
+    border-radius: 16px;
+    padding: 0;
  
 }
+/* Ellipse 2 */
+.circulo-logo{
+    display:flex;
+    width: 70px;
+    height: 70px;
+    background: #ebe7fa;
+    border-radius: 120px;
+}
+.circulo-logo2{
+    display:flex;
+    width: 70px;
+    height: 70px;
+    background: #daf4ef;
+    border-radius: 120px;
+}
+.circulo-logo3{
+    display:flex;
+    width: 70px;
+    height: 70px;
+    background:  #f8e5ea;
+    border-radius: 120px;
+}
+.circulo-logo4{
+    display:flex;
+    width: 70px;
+    height: 70px;
+    background: #f8f1de;
+    border-radius: 120px;
+}
+.circulo-logo5{
+    display:flex;
+    width: 70px;
+    height: 70px;
+    background: #e1f2fa;
+    border-radius: 120px;
+}
 
-.heartbeat {
+
+.texto{
+  margin-left: auto; 
+  margin-right: auto;
+  padding-top: 10px;
+  
+}
+
+.fa-users{
+    color:#ff556e;
+    padding: 20px 10px 10px 15px;
+}
+
+.fa-code{
+    color:#45d3a7;
+    padding: 20px 10px 10px 15px;
+}
+
+.fa-gear{
+    color:#ff556e;
+    padding: 20px 10px 10px 19.5px;
+}
+
+.fa-comments{
+    color:#ffb30f;
+    padding: 20px 10px 10px 15px;
+}
+
+.fa-rocket{
+    color:#4fb9e8;
+    padding: 20px 10px 10px 18px;
+}
+  
+
+
+.logos{
+    display: flex;
+    margin-left: auto; 
+    margin-right: auto;
+    width: 60px;
+    }
+
+.logos:hover{
+  filter: brightness(1.75)
+  
+}
+
+.heartbeat{
 	-webkit-animation: heartbeat 1.5s ease-in-out infinite both;
 	        animation: heartbeat 1.5s ease-in-out infinite both;
             animation-name: heartbeat;
 }
+
+.boton-descarga{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    }
 
 
 /**
@@ -264,3 +364,95 @@ body{
     }
   }
   
+  .download{
+text-decoration:none;
+font-weight: 600;
+font-size: 15px;
+color:#333333;
+padding-top:9px;
+padding-bottom:9px;
+padding-left:40px;
+padding-right:40px;
+background-color: white;
+border-color:#ff556e;
+border-width: 3px;
+border-style: solid;
+border-radius:35px;
+  }
+
+  .download:hover{
+  background: -webkit-gradient(linear, 0 0, 0 100%, from(#ffffff), to(#ff556e));
+  background: -moz-linear-gradient(top, #ffffff, #ff556e);
+  color:#333333;
+  }
+  
+
+  /*botón*/
+
+  a.boton{
+    position: relative;
+    display: block;
+    padding: 25px 10px;
+    border-radius: 6px;
+    text-align: center;
+    font-weight: bold;
+    max-width: 320px;
+    height: 75px;
+    margin-bottom: 60px;
+    margin-right:20px;
+    
+    
+    /*color:rgba(255,255,255,1);*/
+    cursor: pointer;
+    letter-spacing: 2px;
+    box-shadow:inset 0 0 0 1px rgba(0,0,0,0.1);
+    text-decoration: none;
+    transition: all ease 0.5s;
+    /*background:#10B87B;*/
+      background-color: #ff556e;  
+      color: white;
+      border-radius: 30px;
+      border: none;
+  }
+   
+  a.boton:after,
+  a.boton:before{
+    width: 80px;
+    height: 200px;
+    content: '';
+    display: block;
+    background: rgba(255,255,255,0.5);
+    transform: rotate(45deg);
+    top: -60px;
+    position: absolute;
+    transition: none;
+    right:-45%;
+    cursor: pointer;
+  }
+   
+  a.boton:before{
+    left: -48%;
+  }
+   
+  a.boton:hover{
+    text-shadow: 0 1px 1px rgba(0,0,0,0.5);
+    /*background:#12C987*/
+      background-color: #ff556e;  
+  }
+   
+  a.boton:hover:after,
+  a.boton:hover:before{
+    transform: rotate(45deg), scaleX(130%);
+    background: rgba(255,255,255,0.1);
+    transition: all ease 0.5s;
+  }
+   
+  a.boton:hover:after{
+    right: 130%;
+  }
+   
+  a.boton:hover:before{
+    left: 130%;
+  }
+
+ 
